target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'/*'", "'*/'", "'//'", "<INVALID>", 
                     "<INVALID>", "'auto'", "'integer'", "'void'", "'array'", 
                     "'break'", "'float'", "'return'", "'out'", "'boolean'", 
                     "'for'", "'string'", "'continue'", "'do'", "'function'", 
                     "'of'", "'else'", "'if'", "'while'", "'inherit'", "'true'", 
                     "'false'", "'+'", "'!'", "'!='", "'-'", "'*'", "'&&'", 
                     "'<'", "'||'", "'<='", "'/'", "'=='", "'>'", "'%'", 
                     "'>='", "'::'", "'.'", "':'", "','", "';'", "'('", 
                     "')'", "'{'", "'}'", "'='", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "WS", "LCOMMENTC", "RCOMMENTC", "COMMENTCPPSYM", 
                      "COMMENTC", "COMMENTCPP", "AUTO", "INTEGER", "VOID", 
                      "ARRAY", "BREAK", "FLOAT", "RETURN", "OUT", "BOOLEAN", 
                      "FOR", "STRING", "CONTINUE", "DO", "FUNCTION", "OF", 
                      "ELSE", "IF", "WHILE", "INHERIT", "TRUE", "FALSE", 
                      "PLUS", "NOT", "NOTEQ", "MINUS", "MUL", "AND", "SMALLER", 
                      "OR", "SMALLEREQ", "DIVIDE", "EQ", "GREATER", "MODULO", 
                      "GREATEREQ", "STRCONCAT", "DOT", "COLON", "COMMA", 
                      "SEMI", "LPAREN", "RPAREN", "LCURLY", "RCURLY", "ASSIGN", 
                      "LSQBRACKET", "RSQBRRACKET", "ID", "INTLIT", "FLOATLIT", 
                      "STRLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_declarationlist = 2
    RULE_declarationlisttail = 3
    RULE_boolean = 4
    RULE_arraylit = 5
    RULE_comment = 6
    RULE_atomicType = 7
    RULE_dimension = 8
    RULE_dimensiontail = 9
    RULE_arrayType = 10
    RULE_voidType = 11
    RULE_autoType = 12
    RULE_idlist = 13
    RULE_idtail = 14
    RULE_vardecl = 15
    RULE_vardeclnosemi = 16
    RULE_vardecllist = 17
    RULE_vardecllisttail = 18
    RULE_para = 19
    RULE_paralist = 20
    RULE_paratail = 21
    RULE_funcdecl = 22
    RULE_funcpropo = 23
    RULE_funcbody = 24
    RULE_callexpr = 25
    RULE_idxOp = 26
    RULE_expr = 27
    RULE_expr1 = 28
    RULE_expr2 = 29
    RULE_expr3 = 30
    RULE_expr4 = 31
    RULE_expr5 = 32
    RULE_expr6 = 33
    RULE_expr7 = 34
    RULE_expr8 = 35
    RULE_exprlist = 36
    RULE_exprlisttail = 37
    RULE_subexpr = 38
    RULE_numOperand = 39
    RULE_booleanOperand = 40
    RULE_stringOperand = 41
    RULE_relationalOperand = 42
    RULE_stmt = 43
    RULE_stmtlist = 44
    RULE_stmtlisttail = 45
    RULE_lhs = 46
    RULE_assignstmt = 47
    RULE_ifstmt = 48
    RULE_forstmt = 49
    RULE_whilestmt = 50
    RULE_do_whilestmt = 51
    RULE_breakstmt = 52
    RULE_continuestmt = 53
    RULE_returnstmt = 54
    RULE_callstmt = 55
    RULE_blockstmt = 56
    RULE_blockcontent = 57
    RULE_blockcontentlist = 58
    RULE_blockcontentlisttail = 59

    ruleNames =  [ "program", "declaration", "declarationlist", "declarationlisttail", 
                   "boolean", "arraylit", "comment", "atomicType", "dimension", 
                   "dimensiontail", "arrayType", "voidType", "autoType", 
                   "idlist", "idtail", "vardecl", "vardeclnosemi", "vardecllist", 
                   "vardecllisttail", "para", "paralist", "paratail", "funcdecl", 
                   "funcpropo", "funcbody", "callexpr", "idxOp", "expr", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "expr8", "exprlist", "exprlisttail", "subexpr", 
                   "numOperand", "booleanOperand", "stringOperand", "relationalOperand", 
                   "stmt", "stmtlist", "stmtlisttail", "lhs", "assignstmt", 
                   "ifstmt", "forstmt", "whilestmt", "do_whilestmt", "breakstmt", 
                   "continuestmt", "returnstmt", "callstmt", "blockstmt", 
                   "blockcontent", "blockcontentlist", "blockcontentlisttail" ]

    EOF = Token.EOF
    WS=1
    LCOMMENTC=2
    RCOMMENTC=3
    COMMENTCPPSYM=4
    COMMENTC=5
    COMMENTCPP=6
    AUTO=7
    INTEGER=8
    VOID=9
    ARRAY=10
    BREAK=11
    FLOAT=12
    RETURN=13
    OUT=14
    BOOLEAN=15
    FOR=16
    STRING=17
    CONTINUE=18
    DO=19
    FUNCTION=20
    OF=21
    ELSE=22
    IF=23
    WHILE=24
    INHERIT=25
    TRUE=26
    FALSE=27
    PLUS=28
    NOT=29
    NOTEQ=30
    MINUS=31
    MUL=32
    AND=33
    SMALLER=34
    OR=35
    SMALLEREQ=36
    DIVIDE=37
    EQ=38
    GREATER=39
    MODULO=40
    GREATEREQ=41
    STRCONCAT=42
    DOT=43
    COLON=44
    COMMA=45
    SEMI=46
    LPAREN=47
    RPAREN=48
    LCURLY=49
    RCURLY=50
    ASSIGN=51
    LSQBRACKET=52
    RSQBRRACKET=53
    ID=54
    INTLIT=55
    FLOATLIT=56
    STRLIT=57
    UNCLOSE_STRING=58
    ILLEGAL_ESCAPE=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationlist(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationlistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.declarationlist()
            self.state = 121
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 123
                self.vardecl()
                pass

            elif la_ == 2:
                self.state = 124
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def declarationlisttail(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationlisttailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declarationlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationlist" ):
                return visitor.visitDeclarationlist(self)
            else:
                return visitor.visitChildren(self)




    def declarationlist(self):

        localctx = MT22Parser.DeclarationlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarationlist)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.declaration()
                self.state = 128
                self.declarationlisttail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationlisttailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def declarationlisttail(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationlisttailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declarationlisttail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationlisttail" ):
                return visitor.visitDeclarationlisttail(self)
            else:
                return visitor.visitChildren(self)




    def declarationlisttail(self):

        localctx = MT22Parser.DeclarationlisttailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarationlisttail)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.declaration()
                self.state = 134
                self.declarationlisttail()
                pass
            elif token in [MT22Parser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(MT22Parser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MT22Parser.FALSE, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_boolean

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolean" ):
                return visitor.visitBoolean(self)
            else:
                return visitor.visitChildren(self)




    def boolean(self):

        localctx = MT22Parser.BooleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_boolean)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not(_la==MT22Parser.TRUE or _la==MT22Parser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(MT22Parser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(MT22Parser.RCURLY, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylit" ):
                return visitor.visitArraylit(self)
            else:
                return visitor.visitChildren(self)




    def arraylit(self):

        localctx = MT22Parser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arraylit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(MT22Parser.LCURLY)

            self.state = 142
            self.exprlist()
            self.state = 143
            self.match(MT22Parser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENTCPP(self):
            return self.getToken(MT22Parser.COMMENTCPP, 0)

        def COMMENTC(self):
            return self.getToken(MT22Parser.COMMENTC, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_comment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = MT22Parser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not(_la==MT22Parser.COMMENTC or _la==MT22Parser.COMMENTCPP):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomicType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomicType" ):
                return visitor.visitAtomicType(self)
            else:
                return visitor.visitChildren(self)




    def atomicType(self):

        localctx = MT22Parser.AtomicTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atomicType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTEGER) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def dimensiontail(self):
            return self.getTypedRuleContext(MT22Parser.DimensiontailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = MT22Parser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dimension)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(MT22Parser.INTLIT)
                self.state = 150
                self.dimensiontail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensiontailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def dimensiontail(self):
            return self.getTypedRuleContext(MT22Parser.DimensiontailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensiontail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimensiontail" ):
                return visitor.visitDimensiontail(self)
            else:
                return visitor.visitChildren(self)




    def dimensiontail(self):

        localctx = MT22Parser.DimensiontailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimensiontail)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MT22Parser.COMMA)
                self.state = 155
                self.match(MT22Parser.INTLIT)
                self.state = 156
                self.dimensiontail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSQBRACKET(self):
            return self.getToken(MT22Parser.LSQBRACKET, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def RSQBRRACKET(self):
            return self.getToken(MT22Parser.RSQBRRACKET, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = MT22Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(MT22Parser.ARRAY)
            self.state = 161
            self.match(MT22Parser.LSQBRACKET)
            self.state = 162
            self.dimension()
            self.state = 163
            self.match(MT22Parser.RSQBRRACKET)
            self.state = 164
            self.match(MT22Parser.OF)
            self.state = 165
            self.atomicType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VoidTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_voidType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVoidType" ):
                return visitor.visitVoidType(self)
            else:
                return visitor.visitChildren(self)




    def voidType(self):

        localctx = MT22Parser.VoidTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_voidType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(MT22Parser.VOID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutoTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_autoType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAutoType" ):
                return visitor.visitAutoType(self)
            else:
                return visitor.visitChildren(self)




    def autoType(self):

        localctx = MT22Parser.AutoTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_autoType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(MT22Parser.AUTO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def idtail(self):
            return self.getTypedRuleContext(MT22Parser.IdtailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_idlist)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(MT22Parser.ID)
                self.state = 172
                self.idtail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdtailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def idtail(self):
            return self.getTypedRuleContext(MT22Parser.IdtailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idtail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdtail" ):
                return visitor.visitIdtail(self)
            else:
                return visitor.visitChildren(self)




    def idtail(self):
